Einbindung von Waffe